# nextgen-wlan-sim

./: .gitignore  CLAUDE.md  README.md  brainstorm_questions.txt  pyproject.toml
.claude/: settings.local.json
cli/: main.py
configs/examples/: emlsr_vs_str_comparison.yaml  heavy_load_str.yaml  hidden_node.yaml  mixed_ac_priority.yaml  mlo_emlmr_multiap.yaml  mlo_emlsr_2sta.yaml  mlo_str_basic.yaml  multiap_roaming.yaml  npca_basic.yaml  npca_coordinated.yaml  voip_tid_steering.yaml
docs/: algorithm_research_guide.md
docs/setup/: matlab_ubuntu_install.md
docs/superpowers/plans/: 2026-04-14-phase2-matlab-npca.md  (+1 more)
notebooks/: mlo_throughput_demo.ipynb
nxwlansim/: __init__.py  __main__.py
nxwlansim/cli/: main.py
nxwlansim/core/: __init__.py  builder.py  config.py  engine.py  node.py  registry.py  results.py
nxwlansim/dashboard/: api.py  bridge.py  events.py  server.py
nxwlansim/gym/: __init__.py  env.py
nxwlansim/mac/: __init__.py  ampdu.py  edca.py  frame.py  mlo.py  nav.py  npca.py  rx.py  tid_link_map.py  txop.py
nxwlansim/network/: __init__.py  bss.py  ip_layer.py  multi_ap.py
nxwlansim/observe/: __init__.py  logger.py  metrics.py  pcap.py  pcap_hook.py  session_store.py  viz.py
nxwlansim/phy/: __init__.py  base.py  interference.py  matlab_phy.py  tgbe_channel.py
nxwlansim/traffic/: __init__.py  generators.py
scripts/: generate_fixture_tables.py  generate_matlab_tables.m  run_mlo_demo.py  verify_matlab.py
tests/fixtures/: tgbe_d_fixture.h5
tests/integration/: test_basic_sim.py  test_cli.py  test_dashboard_live.py  test_golden.py  test_matlab_generator.py  test_replay.py  test_scenarios.py  test_throughput.py
tests/unit/: test_adaptive_phy.py  test_api.py  test_ba.py  test_bridge.py  test_cache.py  test_edca.py  test_engine_hooks.py  test_interference.py  test_nav.py  test_npca.py  test_npca_coordination.py  test_rx.py  test_session_store.py  test_table_phy.py  test_txop.py  test_viz.py
(+11 files in other folders)
